fix: sticky job filter bar header on mobile

--- a/src/styles/includes/_jobs-page.scss
+++ b/src/styles/includes/_jobs-page.scss
@@ -467,7 +467,11 @@ $filter-bar-height--desktop: 11.8rem;
 		}
 
 		.job-filter-bar__mobile-header {
+			background-color: $color-primary--black;
 			padding: 0;
+			position: sticky;
+			top: 0;
+			z-index: 1;
 		}
 	}
 }
